infra/k8s/20-backend.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend
  namespace: orderhub
spec:
  selector:
    app: backend
  ports:
    - port: 8080
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
  namespace: orderhub
spec:
  replicas: 2
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
        - name: backend
          image: ghcr.io/alejo11102001/orderhub-backend:sha-4f8f1f6
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
          readinessProbe:
            httpGet:
              path: /actuator/health/readiness
              port: 8080
            initialDelaySeconds: 20
            periodSeconds: 5
          livenessProbe:
            httpGet:
              path: /actuator/health/liveness
              port: 8080
            initialDelaySeconds: 40
            periodSeconds: 10
          resources:
            requests:
              memory: 384Mi
              cpu: 100m
            limits:
              memory: 768Mi
